# master_thesis_physics

./: 1 dim fits of the p_dependent absorption cross section_LUT_O3_CO2_atm.xlsx  artsLUT_fitting  artsLUT_fitting_2dim  first plots of arts lookup table.pptx
FluxSimulator/: README.md  pyproject.toml
FluxSimulator/atmdata/batch_atmospheres/: atms_short.xml  auxs_short.xml  refls_short.xml
FluxSimulator/atmdata/single_atmosphere/: atm_idx12494_lat48.975_lon-31.025.xml  atm_idx12680_lat50.975_lon-19.025.xml  atm_idx12852_lat52.975_lon-35.025.xml  atm_idx9108_lat10.975_lon36.975.xml  atm_idx9265_lat12.975_lon-9.025.xml  atm_idx9919_lat20.975_lon-141.025.xml  atm_mean.xml  aux_idx12494_lat48.975_lon-31.025.xml  aux_idx12680_lat50.975_lon-19.025.xml  aux_idx12852_lat52.975_lon-35.025.xml  aux_idx9108_lat10.975_lon36.975.xml  aux_idx9265_lat12.975_lon-9.025.xml  aux_idx9919_lat20.975_lon-141.025.xml  aux_mean.xml
FluxSimulator/examples/: flux_simulator_batch_example.py  flux_simulator_generate_LUT_example.py  flux_simulator_prepare_atmosphere_example.py
FluxSimulator/src/FluxSimulator/: __init__.py  _flux_simulator_agendas.py  _flux_simulator_module.py
FluxSimulator/src/FluxSimulator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
group meetings power points/: First fits of arts look-up table group meeting 26.06.24.pptx  One dim fitting 10.07.2024.pptx
playground/: first fits arts LUT_polyfit
playground/examples/: Interactive-1.ipynb  artsLUT_cubic_fitting.py  artsLUT_fitting  artsLUT_fitting.py  artsLUT_fitting_1d  artsLUT_fitting_2dim  artsLUT_lin_fitting  (+9 more)
(+1 files in other folders)
